# HUBO_work

./: CMakeLists.txt  CMakeLists.txt~  README.md
src/: .tele_quad.cpp.swo  tele_biped.cpp  tele_quad.cpp  tele_quad.cpp~  tele_quad_maomao.cpp  tele_quad_maomao.cpp~  tele_quad_new.cpp  tele_quad_new.cpp~
trajs/: BipedOverBricks.txt  BipedOverBricks_v2.txt  BipedOverBricks_v3.txt  BipedOverBricks_v4.txt  BipedOverBricks_v5.txt  BipedOverBricks_v6.txt  BipedOverBricks_v7.txt  BipedOverBricks_v8.txt  quad_Step_forward.txt  quadwalk_back.txt  quadwalk_crouch.txt  quadwalk_forward.txt  quadwalk_forward_fast.txt  quadwalk_overbars.txt  quadwalk_sideleft.txt  quadwalk_sideright.txt  quadwalk_stand.txt  quadwalk_turnleft.txt  quadwalk_turnright.txt
trajs/new/: quadwalk_back_new.txt  quadwalk_crouch_new.txt  quadwalk_forward_new.txt  quadwalk_sideleft_new.txt  quadwalk_sideright_new.txt  quadwalk_stand_new.txt  quadwalk_turnleft_new.txt  quadwalk_turnright_new.txt
trajs/old/: quad_Initial.txt  quad_Initial_back.txt  quad_Step_backward.txt  quadwalk_back.txt  quadwalk_sideleft.txt  quadwalk_sideright.txt  quadwalk_stand.txt
